--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -1,3 +1,12 @@
 :root {
     background-color: #eeeeee;
 }
+
+a {
+    &.hovered {
+        font-weight: bold;
+    }
+    &.normal {
+        font-weight: normal;
+    }
+}
