change tag <a> color and root background-color

--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -1,8 +1,9 @@
 :root {
-    background-color: #eeeeee;
+    background-color: #000000;
 }
 
 a {
+    color: #ffffff;
     &.hovered {
         font-weight: bold;
     }
