--- a/src/components/styles/mixins/counters.scss
+++ b/src/components/styles/mixins/counters.scss
@@ -15,14 +15,13 @@
     .counter-#{$inner-or-outer} {
         font-size: $fontSize;
         font-weight: lighter;
-        padding: 0 1rem 0 1rem;
     }
 }
 
 @mixin define-counter-grid($inner-or-outer) {
     .grid-counter-#{$inner-or-outer} {
-        border-bottom: 2px solid #eeeeee;
-        padding: 0 1rem 1rem 0;
+        border: 2px solid #eeeeee;
+        padding-bottom: 1rem;
     }
 }
 
