--- a/src/components/inner-counter/inner-counter.scss
+++ b/src/components/inner-counter/inner-counter.scss
@@ -5,7 +5,7 @@
 
 button {        
     &.increaseBtnSmall {
-        @include btn-default(50px, .5rem);
+        @include btn-default(100%, .5rem);
 
         &:hover {
             background-color: #03A9F4;
@@ -14,7 +14,7 @@ button {
     }
     
     &.decreaseBtnSmall {
-        @include btn-default(50px, .5rem);
+        @include btn-default(100%, .5rem);
 
         &:hover {
             background-color: rgb(244, 3, 95);
