--- a/src/styles/mixins/counters.scss
+++ b/src/styles/mixins/counters.scss
@@ -1,8 +1,8 @@
-@mixin btn-default($width, $padding) {
+@mixin btn-default($width) {
     width: $width;
+    height: 100%;
     background-color: #eeeeee;
-    border: 1px solid #cccccc;
-    padding: $padding;
+    border: 1px solid #eeeeee;
     font-weight: bold;
     font-size: 1rem;
     color: #cccccc;
@@ -20,8 +20,17 @@
 
 @mixin define-counter-grid($inner-or-outer) {
     .grid-counter-#{$inner-or-outer} {
-        border: 2px solid #eeeeee;
-        padding-bottom: 1rem;
+        border-bottom: 1px solid #eeeeee;
     }
 }
+
+@mixin define-counter-name($inner-or-outer, $bgColor, $fontColor) {
+    .counterName-#{$inner-or-outer} {
+        font-weight: lighter;
+        background-color: $bgColor;
+        color: $fontColor;
+    }
+}
+
+
 
